updates to the charts view and templates

--- a/Prescient/static/styles/dashboard-styles.css
+++ b/Prescient/static/styles/dashboard-styles.css
@@ -58,7 +58,7 @@ tbody {
 .main-wrapper{
   width: 100%;
   display: grid;
-  grid-template-columns: minmax(0,1fr) minmax(0, 1fr);
+  grid-template-columns: minmax(0,1fr) minmax(0, 1fr) minmax(0, 1fr);
   grid-column-gap: 1px;
   grid-row-gap: 1px;
   min-width: 0;
@@ -88,6 +88,9 @@ tbody {
   max-width:100vw;
   box-sizing:border-box;
   overflow: hidden;
+  grid-column-start: 1;
+  grid-column-end: 4;
+
 }
 
 .pie-chart-container{
