--- a/Prescient/static/styles/dashboard-styles.css
+++ b/Prescient/static/styles/dashboard-styles.css
@@ -58,7 +58,7 @@ tbody {
 .main-wrapper{
   width: 100%;
   display: grid;
-  grid-template-columns: minmax(0,1fr) minmax(0, 1fr) minmax(0, 1fr);
+  grid-template-columns: minmax(0,1fr) minmax(0, 1fr);
   grid-column-gap: 1px;
   grid-row-gap: 1px;
   min-width: 0;
@@ -89,7 +89,7 @@ tbody {
   box-sizing:border-box;
   overflow: hidden;
   grid-column-start: 1;
-  grid-column-end: 4;
+  grid-column-end: 3;
 
 }
 
@@ -104,6 +104,17 @@ tbody {
 }
 
 .bar-chart-container{
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  padding: 2px;
+  border: 1px solid grey;
+  max-width:100vw;
+  box-sizing:border-box;
+  overflow: hidden;
+}
+
+.worldmap-container{
   display: flex;
   align-items: center;
   justify-content: center;
