--- a/Prescient/templates/charts/performance_breakdown.html
+++ b/Prescient/templates/charts/performance_breakdown.html
@@ -3,10 +3,19 @@
 {% extends 'base_layout.html' %}
 <div class="main-wrapper">
 {% block header %}
-  <h1>{% block title %}Performance Breakdown by Security{% endblock %}</h1>
+  <h1>{% block title %}Performance Breakdown by Security {{group_name}}{% endblock %}</h1>
 {% endblock %}
 
 {% block content %}
+<form class="group-selection" action="{{url_for('charts.chart_breakdown')}}" method="post">
+  <span class="selection-label">Select a Watchlist</span>
+  <select class="watchlist-selector" name="watchlist_group_selection">
+    {% for watchlist_name in user_watchlists %}
+    <option value="{{watchlist_name}}">{{watchlist_name}}</option>
+    {% endfor %}
+  </select>
+  <button type="submit" name="btn_btn_default">Get overview</button>
+</form>
 <div class="main-wrapper">
   <div class="table-container">
     <table>
@@ -15,7 +24,7 @@
           <th>Date</th>
           <th>Average Cost</th>
           <th>Price</th>
-          <th>Daily Change</th>
+          <th>Inception To Date</th>
         </tr>
       </thead>
       <tbody>
