--- a/Prescient/templates/watchlist/main.html
+++ b/Prescient/templates/watchlist/main.html
@@ -4,10 +4,19 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='styles/bootstrap/bootstrap.css') }}">
 {% extends 'base_layout.html' %}
 {% block header %}
-  <h1 class="main-heading">{% block title %}Your Watchlist{% endblock %}</h1>
+  <h1 class="main-heading">{% block title %}Entries for {{group_name}}{% endblock %}</h1>
 {% endblock %}
 
 {% block content %}
+<form class="group-selection" action="{{url_for('watchlist.main')}}" method="post">
+  <span class="selection-label">Select a Watchlist</span>
+  <select class="watchlist-selector" name="watchlist_group_selection">
+    {% for watchlist_name in user_watchlists %}
+    <option value="{{watchlist_name}}">{{watchlist_name}}</option>
+    {% endfor %}
+  </select>
+  <button type="submit" name="btn btn-default">Get overview</button>
+</form>
   <table>
     <thead>
       <tr>
