--- a/Prescient/templates/auth/login.html
+++ b/Prescient/templates/auth/login.html
@@ -1,18 +1,20 @@
 <link rel="stylesheet" href="{{ url_for('static', filename='styles/auth-styles.css') }}">
 {% extends 'base_layout.html' %}
-<div class="main-wrapper">
+
 {% block header %}
-  <h1>{% block title %}THIS IS THE LOGIN PAGE{% endblock %}</h1>
+  <h1>{% block title %}{% endblock %}</h1>
 {% endblock %}
 
 {% block content %}
-
+<br>
+<div class="main-wrapper-form">
+  <h1 class="Form-title">Log In</h1>
   {% from "_formhelpers.html" import render_field %}
-  <form action="{{ url_for('auth.login') }}" method="post">
+  <form action="{{ url_for('auth.login') }}" method="post" class="auth-form">
     <dl>
       {{ render_field(form.username) }}
       {{ render_field(form.password) }}
-      {{ render_field(form.remember_me) }}
+      <span class="remember-text">{{ render_field(form.remember_me) }}</span>
     </dl>
     <p>{{ form.submit() }}</p>
     {{ form.csrf_token }}
