--- a/Prescient/templates/watchlist/main.html
+++ b/Prescient/templates/watchlist/main.html
@@ -33,7 +33,7 @@
         {% if item.quantity != 0 %}
         <td class="c2">{{item.ticker}}</td>
         <td class="c3">{{item.quantity}}</td>
-        <td class="c3">{{item.price}}</td>
+        <td class="c3">{{item.average_price}}</td>
         {% endif %}
       </tr>
       {% endfor %}
